--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <!-- ヘッダー -->
 <header class="relative bg-gradient-to-r from-blue-600 to-blue-700 dark:from-blue-700 dark:to-blue-800 text-white p-4 sm:p-6 rounded-xl text-center mb-4 shadow-lg">
-  <h1 class="text-xl sm:text-2xl font-bold">CheckMate v2</h1>
+  <h1 class="text-xl sm:text-2xl font-bold">CheckMate v2β</h1>
   <p class="text-blue-100 dark:text-blue-200">教材・持ち物をまとめて管理！</p>
   
   <!-- ダークモード切り替えボタン -->
@@ -616,9 +616,13 @@ function onCheckDetected(result) {
   const code = result.getText();
   if (!code) return;
 
-  // currentDayが設定されていない場合は設定する
-  if (!currentDay && checklistDate) {
-    currentDay = ['日', '月', '火', '水', '木', '金', '土'][checklistDate.getDay()];
+  // windowオブジェクトから取得（安全な方法）
+  const currentDay = window.currentDay;
+
+  // currentDayが設定されていない場合のフォールバック
+  if (!currentDay) {
+    console.warn('currentDay is not set');
+    return;
   }
 
   const dayItems = items.filter(i => i.days.includes(currentDay));
