--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <!-- ヘッダー -->
 <header class="relative bg-gradient-to-r from-blue-600 to-blue-700 dark:from-blue-700 dark:to-blue-800 text-white p-4 sm:p-6 rounded-xl text-center mb-4 shadow-lg">
-  <h1 class="text-xl sm:text-2xl font-bold">CheckMate v2γ</h1>
+  <h1 class="text-xl sm:text-2xl font-bold">CheckMate v2ζ</h1>
   <p class="text-blue-100 dark:text-blue-200">教材・持ち物をまとめて管理！</p>
   
   <!-- ダークモード切り替えボタン -->
@@ -150,7 +150,7 @@
 
           <!-- スキャンモード -->
           <div id="calendar-scan-mode" class="hidden">
-            <div id="calendar-viewport" class="relative w-full h-64 border-2 border-blue-600 dark:border-blue-400 rounded-lg overflow-hidden bg-black mb-3">
+            <div id="calendar-viewport" class="relative w-full h-64 border-2 border-blue-600 dark:border-blue-400 rounded-xl overflow-hidden bg-black mb-4">
               <video id="calendar-video" class="w-full h-full object-cover"></video>
               <canvas id="calendar-canvas" class="absolute top-0 left-0 w-full h-full"></canvas>
               <div class="guide absolute top-[20%] left-[15%] right-[15%] bottom-[20%] border-4 border-dashed border-green-400 bg-green-400/10 pointer-events-none rounded-lg"></div>
