--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <!-- ヘッダー -->
 <header class="relative bg-gradient-to-r from-blue-600 to-blue-700 dark:from-blue-700 dark:to-blue-800 text-white p-4 sm:p-6 rounded-xl text-center mb-4 shadow-lg">
-  <h1 class="text-xl sm:text-2xl font-bold">CheckMate v2ζ</h1>
+  <h1 class="text-xl sm:text-2xl font-bold">CheckMate v2αβ</h1>
   <p class="text-blue-100 dark:text-blue-200">教材・持ち物をまとめて管理！</p>
   
   <!-- ダークモード切り替えボタン -->
@@ -131,7 +131,7 @@
         </div>
 
         <!-- バーコードスキャナー追加 -->
-        <div class="bg-gray-50 dark:bg-gray-900/50 rounded-lg p-4 mb-4">
+        <div class="bg-gray-50 dark:bg-gray-900/50 rounded-lg p-4 mb-4" style="overflow: visible; max-width: none;">
           <h4 class="text-sm font-semibold mb-3 flex items-center"><span class="mr-2">📱</span>バーコードで追加</h4>
 
           <!-- スキャンモード選択 -->
